- El apartado para explorar grados, temas y vocablos funciona - El apartado para hacer una practica funciona - Los logs funcionan para la practica - Los logs funcionan para explorar grados, temas y vocablos

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,21 @@ body,
 .App {
   /* height: 100%; */
   height: calc(100% - 65px);
-  background: #2d3436;
-  color: aliceblue;
+  /* background: #2d3436;
+  color: aliceblue; */
+}
+
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
